Feat: Validator e Regras de negócio